--- a/styles/modules-styles/footer/footer.css
+++ b/styles/modules-styles/footer/footer.css
@@ -6,10 +6,10 @@
     padding: 2rem;
     padding-bottom: 1rem;
     position: fixed;
-    bottom: 0;
-    right: 0;
     left: 0;
-    z-index: -3;
+    right: 0;
+    bottom: 0;
+    z-index: -1;
 }
 
 .footer__top,
