--- a/styles/templates_styles/advertisment/advertisment.css
+++ b/styles/templates_styles/advertisment/advertisment.css
@@ -11,6 +11,7 @@
     background-size: cover;
     background-attachment: fixed;
     position: relative;
+    z-index: 2;
 }
 
 .advertisment__title {
